fix: kill touch scroll momentum to prevent horizontal snap loop flickers

--- a/index.css
+++ b/index.css
@@ -1646,8 +1646,8 @@ body.menu-lock {
         box-sizing: border-box;
         width: 100%;
         height: 100%;
-        overflow-x: auto !important;
-        overflow-y: hidden !important;
+        overflow-x: auto;
+        overflow-y: hidden;
         scrollbar-width: none;
         -webkit-overflow-scrolling: touch;
         scroll-snap-type: x mandatory !important;
